--- a/pages/students/e18/e18373.html
+++ b/pages/students/e18/e18373.html
@@ -22,13 +22,13 @@ location: #
 
 url_cv: #
 url_website: #
-url_linkedin: #
-url_github: #
-url_facebook: #
+url_linkedin: https://www.linkedin.com/in/vilakshan-vinasirajan/
+url_github: https://github.com/vilakshan2996
+url_facebook: https://www.facebook.com/vinasirajan.vilakshan.92
 url_researchgate: #
 url_twitter: #
 
 interests: #
 
-image_url: "images/students/e18/e18373.jpg"
+image_url: https://avatars.githubusercontent.com/u/73380111
 ---
